<resources>
    <string name="app_name">AQIProximityWorks</string>
    <string name="city">City</string>
    <string name="current_aqi">Current AQI</string>
    <string name="last_updated">Last Updated</string>
    <string name="no_internet_connection">No internet connection, please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="a_few_seconds_ago">A few seconds ago</string>
</resources>