<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/llRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/txt_city_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.2"
                    android:gravity="center"
                    android:text="@string/city" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/txt_aqi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/current_aqi" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/txt_last_updated"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.2"
                    android:text="@string/last_updated" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_aqi" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connection"
                android:textColor="@color/colorAqiVeryPoor" />

            <Button
                android:id="@+id/btn_try_agin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textAllCaps="false" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>